--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "blade-ui-kit/blade-icons": "^1.8",
         "laravel/framework": "^12.0",
         "laravel/jetstream": "^5.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.0",
+        "mallardduck/blade-lucide-icons": "^1.23",
+        "spatie/laravel-permission": "^6.18",
         "tallstackui/tallstackui": "^2.0.0"
     },
     "require-dev": {
