--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,14 @@
     "require": {
         "php": "^8.2",
         "blade-ui-kit/blade-icons": "^1.8",
+        "diglactic/laravel-breadcrumbs": "^10.0",
         "laravel/framework": "^12.0",
         "laravel/jetstream": "^5.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.0",
         "mallardduck/blade-lucide-icons": "^1.23",
+        "rappasoft/laravel-livewire-tables": "^3.7",
         "spatie/laravel-permission": "^6.18",
         "tallstackui/tallstackui": "^2.0.0"
     },
