--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.0",
         "mallardduck/blade-lucide-icons": "^1.23",
+        "predis/predis": "^2.3",
         "power-components/livewire-powergrid": "^6.3",
         "rappasoft/laravel-livewire-tables": "^3.7",
         "spatie/laravel-permission": "^6.18",
